--- a/02.A-working_with_datasets.ipynb
+++ b/02.A-working_with_datasets.ipynb
@@ -50,6 +50,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "#testing this repository\n",
+    "\n",
     "class DataSet:\n",
     "    \"\"\"\n",
     "    A dataset for a machine learning problem. A dataset d has the following properties:\n",
@@ -1040,7 +1042,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('ml')",
    "language": "python",
    "name": "python3"
   },
@@ -1054,7 +1056,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e277e358f5de95c63d085be8a59273806cbe038eab0f4a9f83af798fce1d98c6"
+   }
   }
  },
  "nbformat": 4,
