add old homeworks

--- a/01.A-array-based_programming_with_numpy.ipynb
+++ b/01.A-array-based_programming_with_numpy.ipynb
@@ -3119,13 +3119,42 @@
    },
    "outputs": [],
    "source": [
-    "# TODO"
+    "A1 =[[ 6, 10, 12],\n",
+    "       [ 4,  2,  2],\n",
+    "       [10,  4,  8]]\n",
+    "\n",
+    "B1 = [[ 2, 5],\n",
+    "       [ 1,  0],\n",
+    "       [3,  2]]\n",
+    "\n",
+    "def dotmul(A,B):\n",
+    "       Ax = len(A)\n",
+    "       Ay = len(A[1])\n",
+    "       Bx = len(B)\n",
+    "       By = len(B[1])\n",
+    "       temp = 0\n",
+    "       c = []\n",
+    "       C1 = []\n",
+    "       for i in range(0,Ax):\n",
+    "              for ii in range(0,By):\n",
+    "                     for iii in range(0,Bx):\n",
+    "                            temp += A[i][iii]*B[iii][ii]\n",
+    "                     c.append(temp)\n",
+    "                     temp = 0\n",
+    "              C1.append(c)\n",
+    "              c= []  \n",
+    "\n",
+    "                     \n",
+    "\n",
+    "       return C1\n",
+    "\n",
+    "print(dotmul(A1,B1))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('ml')",
    "language": "python",
    "name": "python3"
   },
@@ -3139,11 +3168,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "0c4ab92bbc10d18b480eb40b47e751a2f458ae1b2b88576453c716fde62785ad"
+    "hash": "e277e358f5de95c63d085be8a59273806cbe038eab0f4a9f83af798fce1d98c6"
    }
   }
  },
