--- a/01.B-organizing_data_into_series_and_dataframes_with_pandas.ipynb
+++ b/01.B-organizing_data_into_series_and_dataframes_with_pandas.ipynb
@@ -5290,13 +5290,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "x=pd.Series(np.arange(1,13))\n",
+    "table = pd.DataFrame()\n",
+    "for i in range(1,13):\n",
+    "    table[i]=i*x\n",
+    "print(\"               12x12 Times Table:\")\n",
+    "print(table)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('ml')",
    "language": "python",
    "name": "python3"
   },
@@ -5310,7 +5317,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e277e358f5de95c63d085be8a59273806cbe038eab0f4a9f83af798fce1d98c6"
+   }
   }
  },
  "nbformat": 4,
