--- a/03.A-naive_bayes_classifiers.ipynb
+++ b/03.A-naive_bayes_classifiers.ipynb
@@ -4894,13 +4894,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I have no idea why or how those values above are being printed, but from what I can see, removing the recursion of the above function only removed about 44 ms and provides no change to the accuracy."
+    "I have no idea why or how those values above are being printed(the massive long ones), but from what I can see, removing the recursion of the above function only removed about 44 ms and provides no change to the accuracy."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('ml')",
+   "display_name": "Python 3.10.4 ('ml')",
    "language": "python",
    "name": "python3"
   },
@@ -4914,11 +4914,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "0c4ab92bbc10d18b480eb40b47e751a2f458ae1b2b88576453c716fde62785ad"
+    "hash": "e277e358f5de95c63d085be8a59273806cbe038eab0f4a9f83af798fce1d98c6"
    }
   }
  },
