--- a/03.B-decision_trees.ipynb
+++ b/03.B-decision_trees.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -55,7 +55,7 @@
        "9   Urgent    No   No  Study"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -135,7 +135,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "'party'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -342,11 +342,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    " def predict(unseen, node=None):\n",
+    "def predict(unseen, node=None):\n",
     "    \"\"\"\n",
     "    Returns the most probable label (or class) for each unseen input. \n",
     "    It can also be a single Series for a single example or a data frame \n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "'TV'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -553,19 +553,19 @@
      "text": [
       "Training set: \n",
       "   deadline party lazy      y\n",
-      "8     Near   Yes  Yes  Party\n",
+      "9   Urgent    No   No  Study\n",
       "4     None    No  Yes    Pub\n",
       "7     Near    No  Yes     TV\n",
-      "1   Urgent    No  Yes  Study\n",
-      "9   Urgent    No   No  Study\n",
-      "3     None   Yes   No  Party\n",
+      "8     Near   Yes  Yes  Party\n",
       "2     Near   Yes  Yes  Party\n",
+      "3     None   Yes   No  Party\n",
+      "6     Near    No   No  Study\n",
       "\n",
       "Test set: \n",
       "   deadline party lazy      y\n",
       "5     None   Yes   No  Party\n",
-      "0   Urgent   Yes  Yes  Party\n",
-      "6     Near    No   No  Study\n"
+      "1   Urgent    No  Yes  Study\n",
+      "0   Urgent   Yes  Yes  Party\n"
      ]
     }
    ],
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -592,10 +592,9 @@
       " [0 0 2 0]\n",
       " [0 0 0 1]]\n",
       "Training accuracy:  1.0\n",
-      "[[1 1 0]\n",
-      " [0 0 1]\n",
-      " [0 0 0]]\n",
-      "Test accuracy:  0.3333333333333333\n"
+      "[[2 0]\n",
+      " [0 1]]\n",
+      "Test accuracy:  1.0\n"
      ]
     }
    ],
@@ -636,26 +635,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy:  1.0\n",
+      "Test accuracy:  0.75\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "data = pd.read_csv('./datasets/restaurant.csv')\n",
+    "ds = my.DataSet(data, y=True)\n",
+    "train, test = ds.train_test_split(test_portion=0.4,shuffle = True)\n",
+    "dt = DecisionTreeClassifier(train)\n",
+    "cm = my.confusion_matrix(train.examples.iloc[:,-1].values, dt.predict(train.examples.iloc[:,:-1]))\n",
+    "accuracy = np.trace(cm) / np.sum(cm)\n",
+    "print('Training accuracy: ', accuracy)\n",
+    "\n",
+    "cm = my.confusion_matrix(test.examples.iloc[:,-1].values, dt.predict(test.examples.iloc[:,:-1]))\n",
+    "accuracy = np.trace(cm) / np.sum(cm)\n",
+    "print('Test accuracy: ', accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO"
+    "class DecisionTreeClassifier_w:\n",
+    "    \"\"\" A basic ID3 Decision Tree\"\"\"\n",
+    "\n",
+    "    def __init__(self, dataset):\n",
+    "        self.dataset = dataset\n",
+    "        self.tree = pd.Series(dtype=object)\n",
+    "        self.make_tree(self.dataset.examples, self.tree)\n",
+    "    \n",
+    "    def entropy(self, df):\n",
+    "        p = df.iloc[:, -1].value_counts() / len(df)\n",
+    "        return (-p * np.log2(p)).sum()\n",
+    "\n",
+    "    def info_gain(self, df, feature):\n",
+    "        p = df[feature].value_counts() / len(df)\n",
+    "\n",
+    "        for v in p.index:\n",
+    "            p.loc[v] *= self.entropy(df[df[feature] == v])\n",
+    "\n",
+    "        return self.entropy(df) - p.sum()\n",
+    "\n",
+    "    def weighted_entropy(self, df, feature):\n",
+    "        p = df[feature].value_counts() / len(df)\n",
+    "\n",
+    "        for v in p.index:\n",
+    "            p.loc[v] *= self.entropy(df[df[feature] == v])\n",
+    "\n",
+    "        return p.sum()\n",
+    "\n",
+    "    def best_feature(self, df):\n",
+    "        features = df.iloc[:, :-1].columns\n",
+    "        info = pd.DataFrame({\"feature\": features})\n",
+    "        info['gain'] = [self.weighted_entropy(df, f) for f in features]\n",
+    "        return info['feature'][info['gain'].argmin()]\n",
+    "    \n",
+    "\n",
+    "    def print_tree(self, name='', node=None, depth=1):\n",
+    "        if node is None:\n",
+    "            node = self.tree\n",
+    "            \n",
+    "        for f in node.index:\n",
+    "            if isinstance(node[f], tuple):\n",
+    "                print(' ' * depth, f, ' => ', node[f], sep='')\n",
+    "            else:\n",
+    "                print(' ' * depth, f, ': ', sep='')\n",
+    "                print_tree(f, node[f], depth + 1)\n",
+    "\n",
+    "    def make_tree(self, df, node, feature=None):\n",
+    "        if feature is None:\n",
+    "            feature = self.best_feature(df)\n",
+    "\n",
+    "        node[feature] = pd.Series(dtype=object)\n",
+    "\n",
+    "        fvalues = df[feature].unique()\n",
+    "        for v in fvalues:\n",
+    "            d = df[df[feature] == v]\n",
+    "            n_classes = len(d.iloc[:, -1].unique())\n",
+    "            if n_classes == 1:\n",
+    "                node[feature][v] = ('L', d.iloc[:, -1].iloc[0])\n",
+    "            elif n_classes > 1:\n",
+    "                d = d.drop([feature], axis=1)\n",
+    "                if len(d.columns) == 1: \n",
+    "                    node[feature][v] = ('L', d.iloc[:, -1].mode()[0])\n",
+    "                else:\n",
+    "                    next_best_feature = self.best_feature(d)\n",
+    "                    node[feature][v] = pd.Series(dtype=object)\n",
+    "                    self.make_tree(d, node[feature][v] ,next_best_feature)\n",
+    "            else:\n",
+    "                pass\n",
+    "\n",
+    "    def predict(self, unseen, node=None):\n",
+    "        \"\"\"\n",
+    "        Returns the most probable label (or class) for each unseen input. \n",
+    "        It can also be a single Series for a single example or a data frame \n",
+    "        with many examples.\n",
+    "        \"\"\"\n",
+    "        if unseen.ndim == 1:\n",
+    "            if node is None:\n",
+    "                node = self.tree\n",
+    "\n",
+    "            feature = node.index[0]\n",
+    "            children = node[feature]\n",
+    "            value = unseen[feature]\n",
+    "            for c in children.index:\n",
+    "                if c == value:\n",
+    "                    if isinstance(children[c], tuple):\n",
+    "                        return children[c][1]\n",
+    "                    else:\n",
+    "                        return self.predict(unseen, children[c])\n",
+    "        else:\n",
+    "            return np.array([self.predict(unseen.iloc[i,:]) for i in range(len(unseen))]) \n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return repr(self.tree)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy:  1.0\n",
+      "Test accuracy:  0.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt = DecisionTreeClassifier_w(train)\n",
+    "cm = my.confusion_matrix(train.examples.iloc[:,-1].values, dt.predict(train.examples.iloc[:,:-1]))\n",
+    "accuracy = np.trace(cm) / np.sum(cm)\n",
+    "print('Training accuracy: ', accuracy)\n",
+    "\n",
+    "cm = my.confusion_matrix(test.examples.iloc[:,-1].values, dt.predict(test.examples.iloc[:,:-1]))\n",
+    "accuracy = np.trace(cm) / np.sum(cm)\n",
+    "print('Test accuracy: ', accuracy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yes it does work, with slight variances every here and there, and it also threw me a code more often than the info gain, but that could be bad luck on its part."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('ml')",
    "language": "python",
    "name": "python3"
   },
@@ -669,7 +812,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e277e358f5de95c63d085be8a59273806cbe038eab0f4a9f83af798fce1d98c6"
+   }
   }
  },
  "nbformat": 4,
