--- a/04.A-example-of-naive-bayes-and-decision-tree.ipynb
+++ b/04.A-example-of-naive-bayes-and-decision-tree.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 293,
    "id": "1945a53d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 294,
    "id": "c88c6412",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "9   Urgent    No   No  Study"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,12 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 295,
    "id": "61bd7717",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = { \"deadline\": \"Near\", \"party\": \"No\", \"lazy\": \"No\" }"
+    "x = { \"deadline\": \"Near\", \"party\": \"No\", \"lazy\": \"Yes\" }"
    ]
   },
   {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 296,
    "id": "eb6a9d44",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "array(['Party', 'Study', 'Pub', 'TV'], dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 297,
    "id": "2bd0fa8a",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "0.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,17 +301,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 298,
    "id": "41ea2824",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.06666666666666667"
+       "0.03333333333333333"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 298,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,17 +341,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 299,
    "id": "75329af2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 300,
    "id": "0817abc6",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
        "0.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 301,
    "id": "6714dbfc",
    "metadata": {},
    "outputs": [
@@ -430,13 +430,13 @@
      "data": {
       "text/plain": [
        "Party    0.000000\n",
-       "Study    0.066667\n",
-       "TV       0.000000\n",
+       "Study    0.033333\n",
+       "TV       0.100000\n",
        "Pub      0.000000\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,17 +460,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 302,
    "id": "27370f95",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Study'"
+       "'TV'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,25 +513,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 313,
    "id": "52320339",
    "metadata": {},
    "outputs": [],
    "source": [
     "def safe_log(p):\n",
-    "    return log(p) if p > 0.0 else 0.0\n",
+    "    return log(p) if p >0 else 0\n",
     "\n",
-    "def entropy(df):\n",
+    "def entropy(df):#changed to\n",
     "    p_party = len(df[df['y'] == 'Party'])/len(df)\n",
     "    p_study = len(df[df['y'] == 'Study'])/len(df)\n",
     "    p_tv = len(df[df['y'] == 'TV'])/len(df)\n",
     "    p_pub = len(df[df['y'] == 'Pub'])/len(df)\n",
     "\n",
     "    return (\n",
-    "        - p_party * safe_log(p_party)\n",
-    "        - p_study * safe_log(p_study)\n",
-    "        - p_tv * safe_log(p_tv)\n",
-    "        - p_pub * safe_log(p_pub)\n",
+    "       1 - p_party ** 2\n",
+    "        - p_study **2\n",
+    "        - p_tv **2\n",
+    "        - p_pub **2\n",
     "    )"
    ]
   },
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 315,
    "id": "ea25015e",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
        "Index(['deadline', 'party', 'lazy'], dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,17 +579,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 316,
    "id": "e321d881",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.1682824501765625"
+       "0.64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 316,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,17 +613,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 317,
    "id": "0c3946ec",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3704856408637076"
+       "0.5166666666666666"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,9 +635,9 @@
     "D_none = ds[ds['deadline'] == 'None']\n",
     "\n",
     "gain_deadline = (\n",
-    "    H_d  - (len(D_urgent) / len(ds)) * entropy(D_urgent) \n",
-    "         - (len(D_near) / len(ds)) * entropy(D_near) \n",
-    "         - (len(D_none) / len(ds)) * entropy(D_none))\n",
+    "        (len(D_urgent) / len(ds)) * entropy(D_urgent) \n",
+    "         + (len(D_near) / len(ds)) * entropy(D_near) \n",
+    "         + (len(D_none) / len(ds)) * entropy(D_none))\n",
     "gain_deadline"
    ]
   },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 318,
    "id": "22652d0b",
    "metadata": {
     "scrolled": true
@@ -664,10 +664,10 @@
     {
      "data": {
       "text/plain": [
-       "0.6931471805599452"
+       "0.27999999999999997"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,8 +677,8 @@
     "D_no = ds[ds['party'] == 'No']\n",
     "\n",
     "gain_party = (\n",
-    "    H_d  - (len(D_yes) / len(ds)) * entropy(D_yes) \n",
-    "         - (len(D_no) / len(ds)) * entropy(D_no))\n",
+    "        (len(D_yes) / len(ds)) * entropy(D_yes) \n",
+    "         + (len(D_no) / len(ds)) * entropy(D_no))\n",
     "gain_party"
    ]
   },
@@ -696,17 +696,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 319,
    "id": "bba247f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.14555158301618448"
+       "0.6"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,8 +716,8 @@
     "D_no = ds[ds['lazy'] == 'No']\n",
     "\n",
     "gain_lazy = (\n",
-    "    H_d  - (len(D_yes) / len(ds)) * entropy(D_yes) \n",
-    "         - (len(D_no) / len(ds)) * entropy(D_no))\n",
+    "        (len(D_yes) / len(ds)) * entropy(D_yes) \n",
+    "         + (len(D_no) / len(ds)) * entropy(D_no))\n",
     "gain_lazy"
    ]
   },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 321,
    "id": "baa2e3c6",
    "metadata": {},
    "outputs": [
@@ -741,7 +741,7 @@
        "'party'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
     "pd.Series({\n",
     "    \"deadline\": gain_deadline, \n",
     "    \"party\": gain_party, \n",
-    "    \"lazy\": gain_lazy}).idxmax()"
+    "    \"lazy\": gain_lazy}).idxmin()"
    ]
   },
   {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 322,
    "id": "ded48935",
    "metadata": {},
    "outputs": [
@@ -773,7 +773,7 @@
        "{'party': {'Yes': None, 'No': None}}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 323,
    "id": "be5d544e",
    "metadata": {},
    "outputs": [
@@ -873,7 +873,7 @@
        "8     Near   Yes  Yes  Party"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 324,
    "id": "5c7d0d9d",
    "metadata": {},
    "outputs": [
@@ -903,7 +903,7 @@
        "{'party': {'Yes': 'Party', 'No': None}}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 325,
    "id": "32342228",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1003,7 @@
        "9   Urgent    No   No  Study"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,17 +1023,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 326,
    "id": "7fe38cc1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8910235779525844"
+       "0.2"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,9 +1044,9 @@
     "D_none = ds[ds['deadline'] == 'None']\n",
     "\n",
     "gain_deadline = (\n",
-    "    H_d  - (len(D_urgent) / len(ds)) * entropy(D_urgent) \n",
-    "         - (len(D_near) / len(ds)) * entropy(D_near) \n",
-    "         - (len(D_none) / len(ds)) * entropy(D_none))\n",
+    "        (len(D_urgent) / len(ds)) * entropy(D_urgent) \n",
+    "         + (len(D_near) / len(ds)) * entropy(D_near) \n",
+    "         + (len(D_none) / len(ds)) * entropy(D_none))\n",
     "gain_deadline"
    ]
   },
@@ -1060,17 +1060,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 327,
    "id": "83edde21",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5091150769756968"
+       "0.3999999999999999"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,8 +1080,8 @@
     "D_no = ds[ds['lazy'] == 'No']\n",
     "\n",
     "gain_lazy = (\n",
-    "    H_d  - (len(D_yes) / len(ds)) * entropy(D_yes) \n",
-    "         - (len(D_no) / len(ds)) * entropy(D_no))\n",
+    "        (len(D_yes) / len(ds)) * entropy(D_yes) \n",
+    "         + (len(D_no) / len(ds)) * entropy(D_no))\n",
     "gain_lazy"
    ]
   },
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 329,
    "id": "3f6425a6",
    "metadata": {},
    "outputs": [
@@ -1105,7 +1105,7 @@
        "'deadline'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 329,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1113,7 @@
    "source": [
     "pd.Series({\n",
     "    \"deadline\": gain_deadline, \n",
-    "    \"lazy\": gain_lazy}).idxmax()"
+    "    \"lazy\": gain_lazy}).idxmin()"
    ]
   },
   {
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 330,
    "id": "9ef5723f",
    "metadata": {},
    "outputs": [
@@ -1137,7 +1137,7 @@
        "  'No': {'deadline': {'Urgent': None, 'Near': None, 'None': None}}}}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 330,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 333,
    "id": "a21616fb",
    "metadata": {},
    "outputs": [
@@ -1213,7 +1213,7 @@
        "9   Urgent    No   No  Study"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 333,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 334,
    "id": "74c83fa3",
    "metadata": {},
    "outputs": [
@@ -1245,7 +1245,7 @@
        "  'No': {'deadline': {'Urgent': 'Study', 'Near': None, 'None': None}}}}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 335,
    "id": "0589f656",
    "metadata": {},
    "outputs": [
@@ -1313,7 +1313,7 @@
        "4     None    No  Yes  Pub"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 335,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 336,
    "id": "e5303a6f",
    "metadata": {},
    "outputs": [
@@ -1345,7 +1345,7 @@
        "  'No': {'deadline': {'Urgent': 'Study', 'Near': None, 'None': 'Pub'}}}}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 336,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 337,
    "id": "c3ee5c0e",
    "metadata": {},
    "outputs": [
@@ -1421,7 +1421,7 @@
        "7     Near    No  Yes     TV"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1442,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 338,
    "id": "f3c7d3ac",
    "metadata": {},
    "outputs": [
@@ -1455,7 +1455,7 @@
        "    'None': 'Pub'}}}}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 338,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 339,
    "id": "7f155148",
    "metadata": {},
    "outputs": [
@@ -1523,7 +1523,7 @@
        "7     Near    No  Yes  TV"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 339,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 340,
    "id": "c2c7d8bc",
    "metadata": {},
    "outputs": [
@@ -1558,7 +1558,7 @@
        "    'None': 'Pub'}}}}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 341,
    "id": "1c3006be",
    "metadata": {},
    "outputs": [
@@ -1626,7 +1626,7 @@
        "6     Near    No   No  Study"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 341,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 342,
    "id": "b3ed71ba",
    "metadata": {},
    "outputs": [
@@ -1663,7 +1663,7 @@
        "    'None': 'Pub'}}}}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 343,
    "id": "164edd41",
    "metadata": {},
    "outputs": [
@@ -1712,16 +1712,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x:  {'deadline': 'Near', 'party': 'No', 'lazy': 'No'}\n"
+      "x:  {'deadline': 'Near', 'party': 'No', 'lazy': 'Yes'}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Study'"
+       "'TV'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1749,18 +1749,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 345,
    "id": "ce85a7a3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, I did get the same tree as using entropy.\n",
+      "tree:\n",
+      " {'party': {'Yes': 'Party', 'No': {'deadline': {'Urgent': 'Study', 'Near': {'lazy': {'Yes': 'TV', 'No': 'Study'}}, 'None': 'Pub'}}}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "print(\"Yes, I did get the same tree as using entropy.\")\n",
+    "print(\"tree:\\n\", tree)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('ml')",
    "language": "python",
    "name": "python3"
   },
@@ -1774,7 +1785,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e277e358f5de95c63d085be8a59273806cbe038eab0f4a9f83af798fce1d98c6"
+   }
   }
  },
  "nbformat": 4,
