--- a/07-neural_networks.ipynb
+++ b/07-neural_networks.ipynb
@@ -1119,7 +1119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start by reshaping each image to row with 64 features (one per pixel). We also need to normalize the color values."
+    "We start by reshaping each image to a row with 64 features (one per pixel). We also need to normalize the color values."
    ]
   },
   {
