--- a/07-neural_networks.ipynb
+++ b/07-neural_networks.ipynb
@@ -1295,9 +1295,7 @@
    "source": [
     "## CHALLENGE\n",
     "\n",
-    "* Train the MLP class above on a modified version of the iris dataset with only the sepal_length and  petal_length as input. Plot the decision regions for both the training and test data points.\n",
-    "\n",
-    "* Plot the training and test errors as a function of the `nHidden` parameter(number of nodes in the hidden layer)."
+    "Train the MLP class above on a modified version of the iris dataset with only the sepal_length and  petal_length as input. Plot the decision regions for both the training and test data points."
    ]
   },
   {
