--- a/12-reinforcement_learning.ipynb
+++ b/12-reinforcement_learning.ipynb
@@ -156,6 +156,9 @@
     "    a_probs = list(self.grid_[s][a].values())\n",
     "    return sum([x[1] for x in a_probs if x[0] == s_])\n",
     "\n",
+    "  def possible_actions(self):\n",
+    "        return list(self.grid_[(1, 1)].keys())\n",
+    "    \n",
     "  def print_transitions(self):\n",
     "    out = \"\"\n",
     "    for s, s_actions in self.grid_.items():\n",
@@ -531,7 +534,7 @@
    },
    "outputs": [],
    "source": [
-    "def q_learning(mdp, eta=0.7, gamma=0.4, epsilon=0.4, episodes=1000):\n",
+    "def q_learning(mdp, eta=0.7, gamma=0.9, epsilon=0.2, episodes=1000):\n",
     "    # All valid states\n",
     "    states = [s for s, _ in mdp.grid_.items() if s not in mdp.blocked]\n",
     "\n",
@@ -540,18 +543,18 @@
     "    for s in states:\n",
     "        Q[s] = {}\n",
     "        for a, S_a in mdp.grid_[s].items():\n",
-    "            Q[s][a] = np.random.rand() * 0.1 - 0.05 \n",
-    "\n",
+    "            if S_a[a][0] != s or s in mdp.terminals:\n",
+    "                Q[s][a] = np.random.rand() * 0.1 - 0.05\n",
+    "                \n",
     "    for _ in range(episodes):\n",
     "        # Pick a non-terminal initial state\n",
     "        while True:\n",
     "            s = states[np.random.randint(len(states))]\n",
     "            if s not in mdp.terminals: break \n",
-    "        \n",
     "        # Stop at the terminal state\n",
     "        while s not in mdp.terminals:\n",
     "            # epsilon-greedy\n",
-    "            if (np.random.rand()<epsilon):\n",
+    "            if (np.random.rand() < epsilon):\n",
     "                #print(s)\n",
     "                a = explore(mdp, s)\n",
     "            else:\n",
@@ -578,6 +581,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "scrolled": false,
     "tags": []
    },
    "outputs": [
@@ -588,7 +592,7 @@
       "---------------------------------------\n",
       " 3 |       >       >       >       1\n",
       " 2 |       ^               ^      -1\n",
-      " 1 |       v       >       ^       <\n",
+      " 1 |       ^       >       ^       <\n",
       "---------------------------------------\n",
       "           1       2       3       4\n"
      ]
@@ -596,6 +600,105 @@
    ],
    "source": [
     "Q = q_learning(gw, episodes=1000)\n",
+    "gw.print_in_grid({ s: pd.Series(Q_a).idxmax() for s, Q_a in Q.items()})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SARSA\n",
+    "\n",
+    "Another slightly different algorithm is called SARSA which stands for State, Action, Reward, next State, next Action. This algorithm starts in the same way as the above q-learning function; it initializes the q-table. It then loops for `episodes` iterations. In each iteration, it:\n",
+    "* picks a random non-terminal initial state $s$\n",
+    "* picks an action $a$ from state $s$ using the $\\epsilon$-greedy strategy\n",
+    "* As long as $s$ is not a terminal state (state F):\n",
+    "    * get the new state $s\\_$ that results from taking action $a$ from state $s$ \n",
+    "    * pick a new action $a\\_$ from state $s\\_$ using the $\\epsilon$-greedy strategy\n",
+    "    * get the reward based on state $s\\_$ and action $a\\_$\n",
+    "    * update $Q$\n",
+    "        \n",
+    "Here is an implementation of this algorithm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sarsa(mdp, eta=0.7, gamma=0.9, epsilon=0.3, episodes=1000):\n",
+    "    # All valid states\n",
+    "    states = [s for s, _ in mdp.grid_.items() if s not in mdp.blocked]\n",
+    "\n",
+    "    # Initialize the q-table to small random values\n",
+    "    Q = {}\n",
+    "    for s in states:\n",
+    "        Q[s] = {}\n",
+    "        for a, S_a in mdp.grid_[s].items():\n",
+    "            if S_a[a][0] != s or s in mdp.terminals:\n",
+    "                Q[s][a] = np.random.rand() * 0.1 - 0.05\n",
+    "                \n",
+    "    for _ in range(episodes):\n",
+    "        # Pick a non-terminal initial state\n",
+    "        while True:\n",
+    "            s = states[np.random.randint(len(states))]\n",
+    "            if s not in mdp.terminals: break \n",
+    "\n",
+    "        if (np.random.rand() < epsilon):\n",
+    "            a = explore(mdp, s)\n",
+    "        else:\n",
+    "            a = pd.Series(Q[s]).idxmax()\n",
+    "\n",
+    "        # Stop at the terminal state\n",
+    "        while s not in mdp.terminals:\n",
+    "            s_ = mdp.grid_[s][a][a][0]\n",
+    "            r = mdp.R(s,a, s_)\n",
+    "\n",
+    "            # epsilon-greedy\n",
+    "            if (np.random.rand() < epsilon):  \n",
+    "                if s_ in gw.terminals: # Avoid exploring an empty action list if s_ is terminal\n",
+    "                    actions = gw.possible_actions()\n",
+    "                    a_ = actions[np.random.randint(len(actions))]\n",
+    "                else:\n",
+    "                    a_ = explore(mdp, s_)\n",
+    "            else:\n",
+    "                a_ = pd.Series(Q[s_]).idxmax()\n",
+    "\n",
+    "            Q[s][a] += eta * (r + gamma * Q[s_][a_] - Q[s][a])\n",
+    "            s = s_\n",
+    "            a = a_\n",
+    "\n",
+    "    return Q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's run this algorithm and print out the returned policies:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------\n",
+      " 3 |       >       >       >       1\n",
+      " 2 |       ^               ^      -1\n",
+      " 1 |       ^       <       ^       <\n",
+      "---------------------------------------\n",
+      "           1       2       3       4\n"
+     ]
+    }
+   ],
+   "source": [
+    "Q = sarsa(gw, episodes=1000)\n",
     "gw.print_in_grid({ s: pd.Series(Q_a).idxmax() for s, Q_a in Q.items()})"
    ]
   },
@@ -637,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +853,7 @@
      "output_type": "stream",
      "text": [
       "Path too long...\n",
-      "A---5.0->A---5.0->A---5.0->A---5.0->A---5.0->A---5.0->A---5.0->A\n"
+      "A---inf->C---inf->E---5.0->E---5.0->E---5.0->E---5.0->E---5.0->E\n"
      ]
     }
    ],
@@ -792,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -846,12 +949,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  1.  16. -inf  -0.  -0.  -0.]\n",
-      " [  6.  11.  40.  16. -inf -inf]\n",
+      "[[  1.  16. -inf -inf  -0.  -0.]\n",
+      " [  6.  11.  40.  16.  -0.  -0.]\n",
       " [-inf  16.  35.  16. -inf 100.]\n",
       " [-inf  16.  40.  11.  40.  -0.]\n",
-      " [-inf   0.  -0.  16.  35. 100.]\n",
-      " [ -0.   0.  -0.  -0.   0.  -0.]]\n"
+      " [ -0.  -0.   0.  16.  35. 100.]\n",
+      " [ -0.   0.   0.   0.  -0.  -0.]]\n"
      ]
     }
    ],
@@ -868,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -887,23 +990,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SARSA\n",
+    "### SARSA\n",
     "\n",
-    "Another slightly different algorithm is called SARSA which stands for State, Action, Reward, next State, next Action. This algorithm starts in the same way as the above q-learning function; it initializes the q-table. It then loops for `episodes` iterations. In each iteration, it:\n",
-    "* picks a random non-terminal initial state $s$\n",
-    "* picks an action $a$ from state $s$ using the $\\epsilon$-greedy strategy\n",
-    "* As long as $s$ is not a terminal state (state F):\n",
-    "    * get the new state $s\\_$ that results from taking action $a$ from state $s$ \n",
-    "    * pick a new action $a\\_$ from state $s\\_$ using the $\\epsilon$-greedy strategy\n",
-    "    * get the reward based on state $s\\_$ and action $a\\_$\n",
-    "    * update $Q$\n",
-    "        \n",
-    "We start by initializing the q-table to random small values."
+    "Let's also implement the SARSA (State, Action, Reward, next State, next Action) algorithm described above. We start by initializing the q-table to random small values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +1021,7 @@
      "output_type": "stream",
      "text": [
       "Path too long...\n",
-      "A---inf->D---5.0->D---5.0->D---5.0->D---5.0->D---5.0->D---5.0->D\n"
+      "A---inf->E---5.0->E---5.0->E---5.0->E---5.0->E---5.0->E---5.0->E\n"
      ]
     }
    ],
@@ -944,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1050,11 +1144,11 @@
      "output_type": "stream",
      "text": [
       "+---------+\n",
-      "|\u001b[35mR\u001b[0m: | : :G|\n",
+      "|R: | : :G|\n",
       "| : | : : |\n",
-      "| : :\u001b[43m \u001b[0m: : |\n",
-      "| | : | : |\n",
-      "|Y| : |\u001b[34;1mB\u001b[0m: |\n",
+      "| : : : : |\n",
+      "|\u001b[43m \u001b[0m| : | : |\n",
+      "|\u001b[35mY\u001b[0m| : |\u001b[34;1mB\u001b[0m: |\n",
       "+---------+\n",
       "\n"
      ]
@@ -1087,7 +1181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "tags": []
    },
@@ -1122,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1263,7 @@
        " 5: [(1.0, 356, -10, False)]}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1215,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1245,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1347,7 @@
      "output_type": "stream",
      "text": [
       "Ran 100 episodes\n",
-      "Penalty per episode: 290.32\n"
+      "Penalty per episode: 285.03\n"
      ]
     }
    ],
@@ -1271,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
